force-app/main/default/objects/Product2/fields/Available_Country__c.field-meta.xml
<CustomField>
    <fullName>Available_Country__c</fullName>
    <label>Available Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Home_Countries</valueSetName>
    </valueSet>
</CustomField>