force-app/main/default/objects/Product2/fields/Calendar_Month_Cost__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Month_Cost__c</fullName>
    <description>Cost per Calendar Month</description>
    <inlineHelpText>Cost per Calendar Month</inlineHelpText>
    <label>Calendar Month Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>