force-app/main/default/objects/Product2/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <description>Card Replacement Cost</description>
    <inlineHelpText>Card Replacement Cost</inlineHelpText>
    <label>Card Replacement Cost</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>