force-app/main/default/objects/Product2/fields/Other_Currency_ATM_Fee__c.field-meta.xml
<CustomField>
    <fullName>Other_Currency_ATM_Fee__c</fullName>
    <description>ATM Fee in other currencies</description>
    <inlineHelpText>ATM Fee in other currencies</inlineHelpText>
    <label>Other Currency ATM Fee</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>